# agentji

./: .env.example  .gitignore  README.md  pyproject.toml
agentji/: __init__.py  builtins.py  cli.py  config.py  executor.py  improver.py  logger.py  loop.py  mcp_bridge.py  memory.py  router.py  run_context.py  server.py  skill_converter.py  skill_translator.py
agentji/studio/: index.html
examples/data-analyst/: README.md  agentji.yaml  test_api.py  test_improvement.py
examples/data-analyst/data/: download_chinook.py
examples/data-analyst/skills/docx-template/: SKILL.md
examples/data-analyst/skills/sql-query/: SKILL.md  skill.yaml
examples/data-analyst/skills/sql-query/scripts/: run_query.py
examples/weather-reporter/: README.md  agentji.yaml
skills/agentji/: SKILL.md  skill.yaml
skills/agentji/scripts/: run.py
tests/: conftest.py  test_builtins.py  test_call_agent.py  test_cli.py  test_config.py  test_e2e_session.py  test_e2e_v0101.py  test_executor.py  test_improvement_e2e.py  test_improver.py  test_integration_dashscope.py  test_integration_local.py  test_logger.py  test_loop_unit.py  test_mcp_bridge.py  test_memory.py  test_root_path.py  test_router.py  test_run_context.py  test_serve.py  test_skill_translator.py
tests/fixtures/: yahoo_finance_mcp.py
utils/: log_viewer.py
